@startuml
!include detailed_style.puml
skinparam arrowThickness 1.1
skinparam arrowColor STORAGE_COLOR
skinparam classBackgroundColor STORAGE_COLOR

class "<<interface>>\nStorage" as Storage
class "<<interface>>\nUserPrefsStorage" as UserPrefsStorage
class "<<interface>>\nProjectBookStorage" as ProjectBookStorage

class StorageManager
class JsonUserPrefsStorage
class JsonProjectBookStorage
class JsonAdaptedProject {
    {field} name: String
    {field} description: String
    {field} completionStatus: boolean
    {field} createdDate: String
    {field} deadline: JsonAdaptedDeadline
    {field} reminder: String
    {field} tagged: List<JsonAdaptedTag>
    {field} durations: List<JsonAdaptedWorkDuration>
    {field} timer: JsonAdaptedTimer
}
class JsonAdaptedTask {
    {field} name: String
    {field} description: String
    {field} completionStatus: boolean
    {field} createdDate: String
    {field} deadline: JsonAdaptedDeadline
    {field} reminder: String
    {field} tagged: List<JsonAdaptedTag>
    {field} durations: List<JsonAdaptedWorkDuration>
}

StorageManager ..|> Storage
StorageManager *--> UserPrefsStorage
StorageManager *--> ProjectBookStorage

JsonUserPrefsStorage ..|> UserPrefsStorage
JsonProjectBookStorage ..|> ProjectBookStorage
JsonProjectBookStorage ..> JsonSerializableProjectBook
JsonSerializableProjectBook ..> "*" JsonAdaptedProject
JsonAdaptedProject "1" *-right-> "*" JsonAdaptedTask

@enduml
